# LEDdisplay

./: .gitignore  displayText.desktop
displayClient/displayClient/: AppDelegate.swift  ViewController.swift
displayClient/displayClient.xcodeproj/: project.pbxproj
displayClient/displayClient.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
displayClient/displayClient.xcodeproj/project.xcworkspace/xcuserdata/cv.xcuserdatad/: UserInterfaceState.xcuserstate
displayClient/displayClient.xcodeproj/xcuserdata/cv.xcuserdatad/xcschemes/: displayClient.xcscheme  xcschememanagement.plist
displayClient/displayClient/Assets.xcassets/AppIcon.appiconset/: Contents.json
displayClient/displayClient/Assets.xcassets/startLogo.imageset/: Contents.json
displayClient/displayClient/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
displayControl/: CMakeLists.txt  displayControl.desktop  startDisplayControl
displayControl/ogl-rgb-led-matrix/: CMakeLists.txt  bdfPrinter.cpp  rgb_matrix.cpp  rgb_matrix.h  shader.cpp
displayControl/rpi-rgb-led-matrix/: CMakeLists.txt  displayText
displayControl/rpi-rgb-led-matrix/include/: led-matrix.h
displayControl/rpi-rgb-led-matrix/lib/: gpio.cc  led-matrix.cc
displayControl/src/: CMakeLists.txt  data.cpp  data.h  global.h  localControl.cpp  localControl.h  main.cpp  remoteControl.cpp
displayWrapper/displayWrapper/: data.cpp  data.h  global.h  localControl.h  main.cpp  remoteControl.cpp  remoteControl.h
displayWrapper/displayWrapper.xcodeproj/: project.pbxproj
displayWrapper/displayWrapper.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
displayWrapper/displayWrapper.xcodeproj/project.xcworkspace/xcuserdata/cv.xcuserdatad/: UserInterfaceState.xcuserstate
displayWrapper/displayWrapper.xcodeproj/xcuserdata/cv.xcuserdatad/xcschemes/: displayWrapper.xcscheme  rgb_matrix.xcscheme  xcschememanagement.plist
displayWrapper/displayWrapper/rgb_matrix/: bdfPrinter.cpp  bdfPrinter.h  fragmentShader.fsgl  image.cpp  image.h  rgb_matrix.cpp  rgb_matrix.h  shader.cpp  shader.h  vertexShader.vsgl
rpi-rgb-led-matrix/: Makefile  bonzesPoste.cc  bonzesPoste.desktop  displayText.cc  displayText.desktop  startLEDbonzesPoste  startLEDdisplayText
rpi-rgb-led-matrix/include/: graphics.h  led-matrix.h
rpi-rgb-led-matrix/lib/: bdf-font.cc  gpio.cc  led-matrix.cc
